<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Who Knows</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Nearby Events</string>
    <string name="action_filter">Filter</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_new_beacon">NewBeaconActivity</string>
    <string name="location">Location</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="show_location">Show Location</string>
    <string name="hide_name">Hide Name</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="contact_info">Contact Info</string>
    <string name="title_activity_beacon_detail">BeaconDetailActivity</string>
    <string name="action_post">Post</string>
    <string name="join">Join</string>
    <string name="example_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sodales enim ut justo imperdiet, ac luctus ante auctor. Maecenas nec enim quis tellus interdum egestas. Ut vel lacus eu est facilisis facilisis. Proin mattis, nisl blandit posuere ornare, odio neque varius risus, at malesuada odio risus ac massa.</string>
    <string name="who_is_going">See who is going</string>
    <string name="dummy_user">dummy user</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email_title">Email</string>
    <string name="post_history">Post History</string>
    <string name="phone_title">Phone</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_test">Test</string>
    <string name="action_logout">Logout</string>
    <string name="action_attendees">Attendees</string>
</resources>
