<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="RtlHardcoded"
                tools:context="com.joebruckner.whoknows.ui.NewPost.CreatePostFragment">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textCapSentences"
        android:background="@null"
        android:singleLine="true"
        android:textSize="22sp"
        android:hint="@string/title"/>

    <View
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_800"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textCapSentences|textMultiLine"
        android:gravity="top|start"
        android:background="@null"
        android:minLines="6"
        android:maxLines="10"
        android:textSize="20sp"
        android:hint="@string/description"
        tools:ignore="UnusedAttribute"/>

    <CheckBox
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:text="@string/show_location"
        android:textSize="14sp"
        android:textColor="@color/grey_800"/>

    <Button
        android:id="@+id/button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/post"/>

</RelativeLayout>
