<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="?attr/colorPrimary"
                android:elevation="5dp"
                android:padding="16dp"
                tools:context="com.joebruckner.whoknows.ui.NewBeaconActivity">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="6dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:backgroundTint="@color/white"
        android:inputType="textCapSentences"
        android:minWidth="250dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="6dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:backgroundTint="@color/white"
        android:inputType="textCapSentences"
        android:minWidth="250dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:hint="@string/description"
        tools:ignore="UnusedAttribute"/>

    <EditText
        android:id="@+id/contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_margin="6dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:backgroundTint="@color/white"
        android:singleLine="true"
        android:minWidth="250dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:hint="@string/contact_info"
        tools:ignore="UnusedAttribute"/>

    <TextView
        android:id="@+id/show_location"
        android:layout_below="@id/contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/show_location"/>

    <CheckBox
        android:id="@+id/show_location_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_info"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/post_as_anonymous"
        android:layout_below="@id/show_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/post_as_anonymous"/>

    <CheckBox
        android:id="@+id/post_as_anonymous_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_location"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_as_anonymous"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/post"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/post"
        android:layout_toLeftOf="@id/post"
        android:layout_toStartOf="@id/post"
        android:text="@string/cancel"/>

</RelativeLayout>
