<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.joebruckner.whoknows.ui.Home.ProfileFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Placeholder for user pic -->
            <ImageView
                android:id="@+id/pic"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_user_pic"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:tint="?attr/colorAccent"
                android:contentDescription="@string/dummy_user"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="28sp"
                tools:text="John Doe"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                card_view:cardCornerRadius="4dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:id="@+id/email_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textColor="?attr/colorPrimaryDark"
                        android:textSize="18sp"
                        android:text="@string/email_title"/>

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="16dp"
                        android:textSize="18sp"
                        tools:text="jd@gmail.com"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_below="@+id/email_title"
                        android:background="@color/grey_400"/>

                    <TextView
                        android:id="@+id/phone_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email_title"
                        android:padding="16dp"
                        android:textColor="?attr/colorPrimaryDark"
                        android:textSize="18sp"
                        android:text="@string/phone_title"/>

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email"
                        android:layout_alignParentRight="true"
                        android:padding="16dp"
                        android:textSize="18sp"
                        tools:text="(123) 456-7890"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_below="@+id/phone_title"
                        android:background="@color/grey_400"/>

                    <Button
                        android:id="@+id/post_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/phone_title"
                        android:gravity="left"
                        android:background="@null"
                        android:padding="16dp"
                        android:textAllCaps="false"
                        android:textColor="?attr/colorPrimaryDark"
                        android:textSize="18sp"
                        android:text="@string/post_history"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



</FrameLayout>
